--- a/config.example.yaml
+++ b/config.example.yaml
@@ -16,21 +16,23 @@ server:
 
 trading:
   enabled: false
-  pairs: [BTCUSDT, ETHUSDT, SOLUSDT, XRPUSDT, ADAUSDT, TONUSDT, DOGEUSDT]
+  pairs: [BTCUSDT, ETHUSDT, BNBUSDT, SOLUSDT, XRPUSDT, ADAUSDT, DOGEUSDT, LTCUSDT, TRXUSDT, MATICUSDT, DOTUSDT, LINKUSDT]
   min_net_bps: 5
   notional_usd: 100
   fees_bps:
-    binance: 7.5
-    kraken: 10
+    bybit: 10
   slippage_bps: 1
   risk_reserve_bps: 0.5
-
-exchanges:
-  binance:
-    base_url: https://api.binance.com
-    api_key: ""
-    secret: ""
-  kraken:
-    base_url: https://api.kraken.com
-    api_key: ""
-    secret: ""
+  # Triangles must be valid markets on Bybit spot. Below are commonly liquid examples; adjust to real availability on Bybit.
+  triangles:
+    - { AB: BTCUSDT, BC: ETHUSDT,   CA: ETHBTC }
+    - { AB: BTCUSDT, BC: BNBUSDT,   CA: BNBBTC }
+    - { AB: BTCUSDT, BC: SOLUSDT,   CA: SOLBTC }
+    - { AB: BTCUSDT, BC: XRPUSDT,   CA: XRPBTC }
+    - { AB: BTCUSDT, BC: ADAUSDT,   CA: ADABTC }
+    - { AB: BTCUSDT, BC: DOGEUSDT,  CA: DOGEBTC }
+    - { AB: BTCUSDT, BC: LTCUSDT,   CA: LTCBTC }
+    - { AB: BTCUSDT, BC: TRXUSDT,   CA: TRXBTC }
+    - { AB: BTCUSDT, BC: MATICUSDT, CA: MATICBTC }
+    - { AB: BTCUSDT, BC: DOTUSDT,   CA: DOTBTC }
+    - { AB: BTCUSDT, BC: LINKUSDT,  CA: LINKBTC }
