config: set daily_pnl_stop_usd=10, add risk defaults (entry_confirm_ticks=3, cooldown=20s, max_inventory_usd_per_base=150) and more triangles

--- a/config.yaml
+++ b/config.yaml
@@ -17,7 +17,7 @@ server:
 trading:
   enabled: true
   live: true
-  pairs: [BTCUSDT, ETHUSDT, SOLUSDT, XRPUSDT, LTCUSDT, DOTUSDT, ALGOUSDT, MANAUSDT, MNTUSDT, SANDUSDT, WBTCUSDT, XLMUSDT]
+  pairs: [BTCUSDT, ETHUSDT, SOLUSDT, XRPUSDT, LTCUSDT, DOTUSDT]
   min_net_bps: 5
   notional_usd: 100
   max_notional_usd: 50
@@ -28,6 +28,10 @@ trading:
   slippage_bps: 1
   risk_reserve_bps: 0.5
   price_skew_bps: 1.0
+  entry_confirm_ticks: 3
+  triangle_cooldown_seconds: 20
+  daily_pnl_stop_usd: 10
+  max_inventory_usd_per_base: 150
   # Triangles must be valid markets on Bybit spot. Below are commonly liquid examples; adjust to real availability on Bybit.
   triangles:
     - { AB: BTCUSDT, BC: ETHUSDT,   CA: ETHBTC }
