Fix CI golangci-lint version compatibility
- Update golangci-lint action to use v2.3.1 instead of latest
- Fix .golangci.yml config to be compatible with v2.3.1
- Remove unsupported 'skip-dirs' field that caused validation errors
- Remove extra --disable flags since all issues are now fixed
- Config now works both locally (v2.3.1) and in CI (v2.3.1)

Fixes GitHub Actions error:
  'additional properties skip-dirs/version not allowed'

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,8 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v6
         with:
-          version: latest
-          args: --timeout=5m --disable errcheck --disable staticcheck
+          version: v2.3.1
+          args: --timeout=5m
       - name: Set version info
         run: |
           echo "VERSION=${GITHUB_REF_TYPE == 'tag' && github.ref_name || 'dev'}" >> $GITHUB_ENV
