--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,29 +1,35 @@
-# This file contains the configuration for golangci-lint
-# See https://golangci-lint.run/usage/configuration/ for more details
-
-version: 2
+# golangci-lint configuration
+# Compatible with golangci-lint v1.62.0
 
 run:
   timeout: 5m
   go: "1.22"
 
 linters:
-  # Enable only basic linters for CI stability
   enable:
     - govet 
     - ineffassign
     - unused
+    - errcheck
+    - staticcheck
   disable-all: true
 
 linters-settings:
   govet:
-    disable:
-      - fieldalignment  # too noisy
-      - shadow         # can be noisy
+    check-shadowing: false
+    settings:
+      printf:
+        funcs:
+          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Infof
+          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Warnf
+          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Errorf
+          - (github.com/golangci/golangci-lint/pkg/logutils.Log).Fatalf
+  staticcheck:
+    go: "1.22"
 
 issues:
   exclude-use-default: true
   exclude-dirs:
     - vendor
-  max-issues-per-linter: 50
-  max-same-issues: 3
+  max-issues-per-linter: 0
+  max-same-issues: 0
