Simplify golangci-lint config for v1.62.0 compatibility
- Remove unsupported linters-settings fields that caused validation errors:
  - govet.check-shadowing (not allowed in v1.62.0)
  - staticcheck.go (not allowed in v1.62.0)
- Use minimal config with only basic supported options
- Enable errcheck and staticcheck via command line args instead of config
- Remove go version from run section (use default)

This should resolve the config validation errors in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         uses: golangci/golangci-lint-action@v6
         with:
           version: v1.62.0
-          args: --timeout=5m
+          args: --timeout=5m --enable=errcheck,staticcheck
       - name: Set version info
         run: |
           echo "VERSION=${GITHUB_REF_TYPE == 'tag' && github.ref_name || 'dev'}" >> $GITHUB_ENV
